Update and rename whereapps.html to whereapp.html

--- a/whereapp.html
+++ b/whereapp.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Alfajri Arraihan">
         <link rel="icon" href="../../favicon.ico">
 
-        <title>Whereapps</title>
+        <title>WhereApp</title>
 
         <link href="css/font-awesome.css" rel="stylesheet"/>
 
@@ -183,7 +183,7 @@
 
         <!-- Navigation Bar -->
         <ul class="navigation">
-            <li class="title">Whereapps</li>
+            <li class="title">WhereApp</li>
             <li class="bar"><span class="fa fa-ellipsis-v"></span></li>
             <li class="bar" style="margin-right:21px"><span class="fa fa-search"></span></li>
         </ul>
