--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Alfajri Arraihan">
         <link rel="icon" href="../../favicon.ico">
 
-        <title>Whereapps</title>
+        <title>WhereApp</title>
 
         <link href="css/font-awesome.css" rel="stylesheet"/>
         
@@ -206,7 +206,7 @@
             </footer>
     
                 <div class="device">
-                    <iframe src="whereapps.html"></iframe>
+                    <iframe src="whereapp.html"></iframe>
                 </div>
         </div>
 
