--- a/whereapp.html
+++ b/whereapp.html
@@ -223,8 +223,8 @@
 
                 $scope.chats = [
                     ["res/equneko.png", "Alien Cringe", "Mau makan... tapi puasa :'v", time[0],true,3],
-                    ["res/ayang1.jpg", "Cewek Anime", "Kamu lagi ngapain? Udah tidur?", time[1],true,1],
-                    ["res/ayang2.jpg", "Cewek Anime 2","Ak tuh gk mw hmpp >///<", time[1],true,"+999"],
+                    ["res/cewek.jpg", "Cewek Anime", "Kamu lagi ngapain? Udah tidur?", time[1],true,1],
+                    ["res/cewek2.jpg", "Cewek Anime 2","Ak tuh gk mw hmpp >///<", time[1],true,"+999"],
                     [iconprofile, "Random Guy", "Cok gimana kabar lu?", "12/09/2020",true,5],
                     [iconprofile, "Wibu Anime", "Gwehj anime banh", "13/04/2019",false,0],
                     ["res/jojo.jpg", "Giorno Giovanna", "Ore wa yume ga aru!!!", "9/07/1991",false,0],
