--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 padding: 0;
                 box-sizing: border-box;
             }
+            
+            .button{
+                text-decoration: none;
+            }
 
             .button:hover{
                 opacity: 80%;
@@ -184,14 +188,14 @@
     <body>
         <div class="container">
             <div class="content">
-                <h1>Whereapps Web Design</h1>
+                <h1>WhereApp Web Design</h1>
                 <p>Responsive mobile design app looks like Whatsapp! build in AngularJS and Jquery<br/>
                    
                    Please support me on Github! for this Project.</p>
 
-                <button class="button" style="background-color:rgb(77, 77, 77); margin-right:12px">
-                    <span class="fa fa-github"></span> GITHUB</button>
-                <button class="button">COMING SOON</button>
+                <a href="" class="button" style="background-color:rgb(77, 77, 77); margin-right:12px">
+                    <span class="fa fa-github"></span> GITHUB</a>
+                <a href="#" class="button">COMING SOON</a>
 
                 <ul class="social">
                     <li><a target="_blank" href="https://web.facebook.com/alfequneko19"><span class="fa fa-facebook-square"></span></a></li>
