--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                    
                    Please support me on Github! for this Project.</p>
 
-                <a href="" class="button" style="background-color:rgb(77, 77, 77); margin-right:12px">
+                <a href="https://github.com/equneko/WhereApp" class="button" style="background-color:rgb(77, 77, 77); margin-right:12px">
                     <span class="fa fa-github"></span> GITHUB</a>
                 <a href="#" class="button">COMING SOON</a>
 
